--- a/src/app/shared/modules/layout/main/main.component.html
+++ b/src/app/shared/modules/layout/main/main.component.html
@@ -1,14 +1,19 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar color="primary">Menu</mat-toolbar>
-    <!-- <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list> -->
+    <mat-nav-list>
+      <mat-list-item [routerLink]="'main/dashboard'">
+          <mat-icon mat-list-icon>home</mat-icon>
+          <span >Dashboard</span>
+      </mat-list-item>
+      
+      <!-- <a mat-list-item href="#">Link 2</a> -->
+      <!-- <a mat-list-item href="#">Link 3</a> -->
+    </mat-nav-list>
     <app-sidenav></app-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
