--- a/src/app/shared/modules/layout/sidenav/sidenav.component.html
+++ b/src/app/shared/modules/layout/sidenav/sidenav.component.html
@@ -1,10 +1,11 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    <mat-icon class="type-icon" [attr.aria-label]="node.type + 'icon'">
-      {{ node.type === 'file' ? 'description' : 'folder' }}
-    </mat-icon>
-    {{node.name}}
+    <button mat-icon-button [routerLink]="node.url">
+      <mat-icon class="type-icon" [attr.aria-label]="node.type + 'icon'">
+        {{ node.type === 'file' ? 'description' : 'folder' }}
+      </mat-icon>
+      {{node.name}}
+    </button>
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
