changes for build up

--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -1,3 +1,2 @@
-{{ id }}
-<table id="{{id}}" class="table-bordered table-striped table" >
+<table id="{{id}}" class=" table-striped table" >
 </table>
