--- a/src/app/modules/market/components/stock/stock.component.html
+++ b/src/app/modules/market/components/stock/stock.component.html
@@ -1,10 +1,68 @@
 <div class="grid-container">
     <h1 class="mat-h1">Stock</h1>
-    <mat-card>
-        <app-datatable 
-            [id]="stock.listDatatable.id" 
-            [options]="stock.listDatatable.options" 
-            (instance)="listDatatableEvt($event)">
-        </app-datatable>
-    </mat-card>
+    <mat-grid-list cols="1" rowHeight="600px">
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        Sample Card
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <app-datatable [id]="stock.listDatatable.id" [options]="stock.listDatatable.options"
+                        (instance)="listDatatableEvt($event)">
+                    </app-datatable>
+                </mat-card-content>
+            </mat-card>
+
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        Details
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Prev.Close</th>
+                                <th>Open</th>
+                                <th>High</th>
+                                <th>Low</th>
+                                <th>Close</th>
+                                <th>Volume</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>{{ stock.info.priceprevclose }}</td>
+                                <td>{{ stock.info.OPN }}</td>
+                                <td>{{ stock.info.HP }}</td>
+                                <td>{{ stock.info.LP }}</td>
+                                <td>{{ stock.info.pricecurrent }}</td>
+                                <td>{{ stock.info.VOL }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
+
 </div>
