--- a/src/app/modules/market/components/index/index.component.html
+++ b/src/app/modules/market/components/index/index.component.html
@@ -1,10 +1,113 @@
 <div class="grid-container">
-    <h1 class="mat-h1">Index</h1>
-    <mat-card>
-        <app-datatable 
-            [id]="index.listDatatable.id" 
-            [options]="index.listDatatable.options" 
-            (instance)="listDatatableEvt($event)">
-        </app-datatable>
-    </mat-card>
+    <h1 class="mat-h1">Stock</h1>
+    <mat-grid-list cols="1" rowHeight="600px">
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        All Index
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <app-datatable [id]="index.listDatatable.id" [options]="index.listDatatable.options"
+                        (instance)="listDatatableEvt($event)">
+                    </app-datatable>
+                </mat-card-content>
+            </mat-card>
+
+        </mat-grid-tile>
+    </mat-grid-list>
+    <mat-grid-list cols="2" rowHeight="600px">
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        otmCallDatatable
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <app-datatable [id]="index.otmCallDatatable.id" [options]="index.otmCallDatatable.options"
+                        (instance)="otmCallDatatableEvt($event)">
+                    </app-datatable>
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        otmPutDatatable
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <app-datatable [id]="index.otmPutDatatable.id" [options]="index.otmPutDatatable.options"
+                        (instance)="otmPutDatatableEvt($event)">
+                    </app-datatable>
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-card class="dashboard-card">
+                <mat-card-header>
+                    <mat-card-title>
+                        itmCallDatatable
+                        <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu" xPosition="before">
+                            <button mat-menu-item>Expand</button>
+                            <button mat-menu-item>Remove</button>
+                        </mat-menu>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="dashboard-card-content">
+                    <app-datatable [id]="index.itmCallDatatable.id" [options]="index.itmCallDatatable.options"
+                    (instance)="itmCallDatatableEvt($event)">
+                </app-datatable>
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="1">
+        <mat-card class="dashboard-card">
+            <mat-card-header>
+                <mat-card-title>
+                    itmPutDatatable
+                    <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu" xPosition="before">
+                        <button mat-menu-item>Expand</button>
+                        <button mat-menu-item>Remove</button>
+                    </mat-menu>
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="dashboard-card-content">
+            <app-datatable [id]="index.itmPutDatatable.id" [options]="index.itmPutDatatable.options"
+                (instance)="itmPutDatatableEvt($event)">
+            </app-datatable>
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
 </div>
